# GLhf

./: .gitignore  .travis.yml  Build.sh  BuildRun.sh  BuildTests.sh  CMakeLists.txt  README.md
.github/workflows/: blank.yml  linux.yml  macOS.yml  main.yml  windows.yml
CMake/: DebugNinja.sh  Ninja.sh  ReleaseNinja.sh
src/: main.cpp
